Table olist_customers_dataset {
	customer_id varchar [primary key]
	customer_unique_id varchar
	customer_zip_code_prefix int
	customer_city varchar
	customer_state varchar
}
Table olist_geolocation_dataset {
	geolocation_zip_code_prefix int
	geolocation_lat decimal
	geolocation_lng decimal
	geolocation_city varchar
	geolocation_state varchar
}
Table olist_order_items_dataset {
	order_id varchar [primary key]
	order_item_id int
	product_id varchar
	seller_id varchar [ref: > olist_sellers_dataset.seller_id]
	shipping_limit_date varchar
	price decimal
	freight_value decimal
}
Table olist_order_payments_dataset {
	order_id varchar [ref: > olist_order_items_dataset.order_id]
	payment_sequential int
	payment_type varchar
	payment_installments int
	payment_value decimal
}
Table olist_order_reviews_dataset {
	review_id varchar
	order_id varchar [ref: > olist_order_items_dataset.order_id]
	review_score int
	review_comment_title varchar
	review_comment_message varchar
	review_creation_date varchar
	review_answer_timestamp varchar
}
Table olist_orders_dataset {
	order_id varchar [ref: > olist_order_items_dataset.order_id]
	customer_id varchar [ref: > olist_customers_dataset.customer_id]
	order_status varchar
	order_purchase_timestamp varchar
	order_approved_at varchar
	order_delivered_carrier_date varchar
	order_delivered_customer_date varchar
	order_estimated_delivery_date varchar
}
Table olist_products_dataset {
	product_id varchar [primary key]
	product_category_name varchar [ref: > product_category_name_translation.product_category_name]
	product_name_lenght decimal
	product_description_lenght decimal
	product_photos_qty decimal
	product_weight_g decimal
	product_length_cm decimal
	product_height_cm decimal
	product_width_cm decimal
}
Table olist_sellers_dataset {
	seller_id varchar [primary key]
	seller_zip_code_prefix int
	seller_city varchar
	seller_state varchar
}
Table product_category_name_translation {
	product_category_name varchar [primary key]
	product_category_name_english varchar
}